Update docs URL to use new pattern
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/charts/monitoring/prometheus/rules/general-helm-exporter.yaml
+++ b/charts/monitoring/prometheus/rules/general-helm-exporter.yaml
@@ -19,10 +19,10 @@ groups:
       - alert: HelmReleaseNotDeployed
         annotations:
           message: The Helm release `{{ $labels.release }}` (`{{ $labels.chart }}` chart in namespace `{{ $labels.exported_namespace }}`) in version {{ $labels.version }} has not been ready for more than 15 minutes.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-helmreleasenotdeployed
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-helmreleasenotdeployed
         expr: helm_chart_info != 1
         for: 15m
         labels:
           severity: warning
-          resource: '{{ $labels.release }}'
+          resource: "{{ $labels.release }}"
           service: helm-exporter
