--- a/charts/monitoring/prometheus/rules/general-kube-kubelet.yaml
+++ b/charts/monitoring/prometheus/rules/general-kube-kubelet.yaml
@@ -19,17 +19,17 @@ groups:
       - alert: KubeletDown
         annotations:
           message: Kubelet has disappeared from Prometheus target discovery.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubeletdown
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubeletdown
         expr: absent(up{job="kubelet"} == 1)
         for: 15m
         labels:
           severity: critical
-          resource: '{{ $labels.instance }}'
+          resource: "{{ $labels.instance }}"
           service: kubelet
       - alert: KubePersistentVolumeUsageCritical
         annotations:
           message: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in namespace {{ $labels.namespace }} is only {{ printf "%0.0f" $value }}% free.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubepersistentvolumeusagecritical
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubepersistentvolumeusagecritical
         expr: |
           100 * kubelet_volume_stats_available_bytes{job="kubelet"}
             /
@@ -39,11 +39,11 @@ groups:
         labels:
           severity: critical
           service: kubelet
-          resource: '{{ $labels.namespace }}/{{ $labels.persistentvolumeclaim }}'
+          resource: "{{ $labels.namespace }}/{{ $labels.persistentvolumeclaim }}"
       - alert: KubePersistentVolumeFullInFourDays
         annotations:
           message: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in namespace {{ $labels.namespace }} is expected to fill up within four days. Currently {{ $value }} bytes are available.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubepersistentvolumefullinfourdays
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubepersistentvolumefullinfourdays
         expr: |
           (
             kubelet_volume_stats_used_bytes{job="kubelet"}
@@ -56,21 +56,21 @@ groups:
         labels:
           severity: critical
           service: kubelet
-          resource: '{{ $labels.namespace }}/{{ $labels.persistentvolumeclaim }}'
+          resource: "{{ $labels.namespace }}/{{ $labels.persistentvolumeclaim }}"
       - alert: KubeletTooManyPods
         annotations:
           message: Kubelet {{ $labels.instance }} is running {{ $value }} pods, close to the limit of 110.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubelettoomanypods
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubelettoomanypods
         expr: kubelet_running_pod_count{job="kubelet"} > 110 * 0.9
         for: 15m
         labels:
           severity: warning
-          resource: '{{ $labels.instance }}'
+          resource: "{{ $labels.instance }}"
           service: kubelet
       - alert: KubeletClientErrors
         annotations:
           message: The kubelet on {{ $labels.instance }} is experiencing {{ printf "%0.0f" $value }}% errors.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubeletclienterrors
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubeletclienterrors
         expr: |
           (sum(rate(rest_client_requests_total{code=~"(5..|<error>)",job="kubelet"}[5m])) by (instance)
             /
@@ -79,13 +79,13 @@ groups:
         for: 15m
         labels:
           severity: warning
-          resource: '{{ $labels.instance }}'
+          resource: "{{ $labels.instance }}"
           service: kubelet
       # a dedicated rule for pods to include more helpful labels in the message like the instance and job name
       - alert: KubeClientErrors
         annotations:
           message: The pod {{ $labels.namespace }}/{{ $labels.pod }} is experiencing {{ printf "%0.0f" $value }}% errors.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubeclienterrors
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubeclienterrors
         expr: |
           (sum(rate(rest_client_requests_total{code=~"(5..|<error>)",job="pods"}[5m])) by (namespace, pod)
             /
@@ -94,45 +94,45 @@ groups:
         for: 15m
         labels:
           severity: warning
-          resource: '{{ $labels.instance }}'
+          resource: "{{ $labels.instance }}"
           service: kubelet
       - alert: KubeletRuntimeErrors
         annotations:
           message: The kubelet on {{ $labels.instance }} is having an elevated error rate for container runtime oprations.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubeletruntimeerrors
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubeletruntimeerrors
         expr: |
           sum(rate(kubelet_runtime_operations_errors_total{job="kubelet"}[5m])) by (instance) > 0.1
         for: 15m
         labels:
           severity: warning
-          resource: '{{ $labels.instance }}'
+          resource: "{{ $labels.instance }}"
           service: kubelet
       - alert: KubeletCGroupManagerDurationHigh
         annotations:
           message: The kubelet's cgroup manager duration on {{ $labels.instance }} has been elevated ({{ printf "%0.2f" $value }}ms) for more than 15 minutes.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubeletcgroupmanagerlatencyhigh
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubeletcgroupmanagerlatencyhigh
         expr: |
           sum(rate(kubelet_cgroup_manager_duration_seconds{quantile="0.9"}[5m])) by (instance) * 1000 > 1
         for: 15m
         labels:
-          resource: '{{ $labels.instance }}'
+          resource: "{{ $labels.instance }}"
           service: kubelet
           severity: warning
       - alert: KubeletPodWorkerDurationHigh
         annotations:
           message: The kubelet's pod worker duration for {{ $labels.operation_type }} operations on {{ $labels.instance }} has been elevated ({{ printf "%0.2f" $value }}ms) for more than 15 minutes.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubeletpodworkerdurationhigh
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubeletpodworkerdurationhigh
         expr: |
           sum(rate(kubelet_pod_worker_duration_seconds{quantile="0.9"}[5m])) by (instance, operation_type) * 1000 > 250
         for: 15m
         labels:
           severity: warning
-          resource: '{{ $labels.instance }}/{{ $labels.operation_type }}'
+          resource: "{{ $labels.instance }}/{{ $labels.operation_type }}"
           service: kubelet
       - alert: KubeVersionMismatch
         annotations:
           message: There are {{ $value }} different versions of Kubernetes components running.
-          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubeversionmismatch
+          runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-kubeversionmismatch
         expr: count(count(kubernetes_build_info{job!="dns"}) by (gitVersion)) > 1
         for: 1h
         labels:
