--- a/.prow/provider-vsphere.yaml
+++ b/.prow/provider-vsphere.yaml
@@ -40,6 +40,8 @@ presubmits:
               value: "vsphere"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
@@ -84,6 +86,8 @@ presubmits:
               value: "vsphere"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: SCENARIO_OPTIONS
               value: "custom-folder"
             - name: SERVICE_ACCOUNT_KEY
@@ -132,6 +136,8 @@ presubmits:
               value: ubuntu
             - name: SCENARIO_OPTIONS
               value: "datastore-cluster"
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
