--- a/.prow/provider-kubevirt.yaml
+++ b/.prow/provider-kubevirt.yaml
@@ -39,6 +39,8 @@ presubmits:
               value: "kubevirt"
             - name: DISTRIBUTIONS
               value: centos
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
