--- a/.prow/provider-nutanix.yaml
+++ b/.prow/provider-nutanix.yaml
@@ -41,6 +41,8 @@ presubmits:
               value: "nutanix"
             - name: DISTRIBUTIONS
               value: "ubuntu"
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
