--- a/.prow/provider-openstack.yaml
+++ b/.prow/provider-openstack.yaml
@@ -39,6 +39,8 @@ presubmits:
               value: "openstack"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: DEFAULT_TIMEOUT_MINUTES
               value: "20"
             - name: SERVICE_ACCOUNT_KEY
