Improve Conformance Tester (#10677)
* allow to disable individual tests in conformance-tester instead of just all or nothing

* make cluster deletion work when there are other clusters around, remove concept of worker names

* create fewer conflicts by reconciling SSH keys instead of always trying to create new ones

* fix rockylinux support in conformance-tester

* add support for testing different container runtimes

* support gitops for hetzner tests

* use a generic baseScenario, fetch KubermaticConfig in order to auto-enable external CCMs during cluster creation

* allow to delete clusters in the background instead of waiting for them to be gone

* always clean up, retry adding SSH keys

* add support for digitalocean kube-based tests

* implement support for packet

* use the resources package to not duplicate all this fragile logic, even though it's technically based on API-only types

* auto-skip docker on kubernetes 1.24

* add more OS

* rewrite how scenarios are created, simplify code

* better logging

* fix SSH keys

* wait for authenticator to be available

* SLES is only supported on AWS with Docker

* codegen

* even later

* add polling to the node metrics stuff

* provide more info when printing test results

* make all conformance e2e tests headless, add dedicated API-based test

* make it easier to disable all tests

* post-rebase blues

* add flagopts.SetFlag helper to make using string sets in CLI easier

* remove unused StringArray flag implementation

* make sure Poll() stops when the app context is cancelled

* give the condition some time to change before retrying

* fix formatting

* fixes

* fix google/gce/gcp naming

* google supports ubuntu only apparently

* less verbose metadata in logs

* fix GCE zone

* fix typo

* enable Amazon Linux support in tester

* include KKP info in output

* more logging improvements

* no need to be overly precise

* improve logging

* fix

* PR feedback

--- a/.prow/provider-aws.yaml
+++ b/.prow/provider-aws.yaml
@@ -38,6 +38,8 @@ presubmits:
               value: "1.22"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
@@ -80,6 +82,8 @@ presubmits:
               value: "1.23"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
@@ -122,6 +126,8 @@ presubmits:
               value: "1.24"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
@@ -161,12 +167,14 @@ presubmits:
           env:
             - name: KUBERMATIC_EDITION
               value: "ce"
-            - name: ONLY_TEST_CREATION
-              value: "true"
+            - name: EXCLUDE_TESTS
+              value: "all"
             - name: RELEASES_TO_TEST
               value: "1.24"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
@@ -184,7 +192,7 @@ presubmits:
             limits:
               memory: 6Gi
 
-  - name: pre-kubermatic-e2e-aws-ubuntu-1.24-headless
+  - name: pre-kubermatic-e2e-aws-ubuntu-1.24-api
     decorate: true
     run_if_changed: "(cmd/|codegen/|hack/|pkg/|charts/kubermatic|addons/|.prow/)"
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
@@ -206,7 +214,7 @@ presubmits:
             - name: KUBERMATIC_EDITION
               value: "ee"
             - name: SETUP_MODE
-              value: "kube"
+              value: "api"
             - name: RELEASES_TO_TEST
               value: "1.24"
             - name: DISTRIBUTIONS
