--- a/pkg/resources/test/fixtures/service-openstack-1.24.0-usercluster-webhook.yaml
+++ b/pkg/resources/test/fixtures/service-openstack-1.24.0-usercluster-webhook.yaml
@@ -7,9 +7,14 @@ metadata:
   name: usercluster-webhook
 spec:
   ports:
-  - port: 443
+  - name: seed
+    port: 443
     protocol: TCP
     targetPort: 9443
+  - name: user
+    port: 6443
+    protocol: TCP
+    targetPort: 19443
   selector:
     app: usercluster-webhook
   type: ClusterIP
