Add setup_mode=kube for ubuntu KubeVirt tests
API mode requires double base64 encoded kubeconfig.
For all KubeVirt tests it should be either API or kube mode
with secrets adjusted accrodingly.
Auth for KubeVirt cluster will be improved in 2.22.

Signed-off-by: Marcin Franczyk <marcin0franczyk@gmail.com>

--- a/.prow/provider-kubevirt.yaml
+++ b/.prow/provider-kubevirt.yaml
@@ -84,6 +84,8 @@ presubmits:
               value: "kubevirt"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
