Fix additional CI issues (linter and generated apiclient)
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -85,6 +85,7 @@ issues:
   - cyclomatic complexity [0-9]+ of func `\(\*Reconciler\)\.ensureResourcesAreDeployed` is high
   - cyclomatic complexity [0-9]+ of func `GetAPIV2NodeCloudSpec` is high
   - cyclomatic complexity [0-9]+ of func `TestKonnectivity` is high
+  - cyclomatic complexity [0-9]+ of func `validateOpenStackCloudSpec` is high
   # gocritic
   - singleCaseSwitch # in most cases this is the beginning of a lookup table and should be kept an obvious table
 
