--- a/pkg/resources/test/fixtures/deployment-azure-1.23.5-azure-cloud-controller-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-azure-1.23.5-azure-cloud-controller-manager-externalCloudProvider.yaml
@@ -122,9 +122,9 @@ spec:
       - name: openvpn-client-certificates
         secret:
           secretName: openvpn-client-certificates
-      - configMap:
-          name: cloud-config
-        name: cloud-config
+      - name: cloud-config
+        secret:
+          secretName: cloud-config
       - emptyDir: {}
         name: http-prober-bin
 status: {}
