--- a/pkg/resources/test/fixtures/deployment-digitalocean-1.22.1-controller-manager.yaml
+++ b/pkg/resources/test/fixtures/deployment-digitalocean-1.22.1-controller-manager.yaml
@@ -23,7 +23,7 @@ spec:
         app.kubernetes.io/version: 1.22.1
         ca-bundle-configmap-revision: "123456"
         ca-secret-revision: "123456"
-        cloud-config-configmap-revision: "123456"
+        cloud-config-secret-revision: "123456"
         cluster: de-test-01
         controllermanager-kubeconfig-secret-revision: "123456"
         openvpn-client-certificates-secret-revision: "123456"
@@ -209,9 +209,9 @@ spec:
       - name: service-account-key
         secret:
           secretName: service-account-key
-      - configMap:
-          name: cloud-config
-        name: cloud-config
+      - name: cloud-config
+        secret:
+          secretName: cloud-config
       - name: controllermanager-kubeconfig
         secret:
           secretName: controllermanager-kubeconfig
