--- a/pkg/resources/test/fixtures/deployment-openstack-1.24.0-apiserver.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.24.0-apiserver.yaml
@@ -28,7 +28,7 @@ spec:
         audit-config-configmap-revision: "123456"
         ca-bundle-configmap-revision: "123456"
         ca-secret-revision: "123456"
-        cloud-config-configmap-revision: "123456"
+        cloud-config-secret-revision: "123456"
         cluster: de-test-01
         front-proxy-ca-secret-revision: "123456"
         kubelet-client-certificates-secret-revision: "123456"
@@ -371,9 +371,9 @@ spec:
       - name: service-account-key
         secret:
           secretName: service-account-key
-      - configMap:
-          name: cloud-config
-        name: cloud-config
+      - name: cloud-config
+        secret:
+          secretName: cloud-config
       - name: apiserver-etcd-client-certificate
         secret:
           secretName: apiserver-etcd-client-certificate
