define an enum for the external provider name

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
@@ -368,6 +368,14 @@ spec:
                     - sshReference
                     type: object
                   providerName:
+                    description: ExternalClusterProvider is the identifier for the
+                      cloud provider that hosts the external cluster control plane.
+                    enum:
+                    - aks
+                    - bringyourown
+                    - eks
+                    - kubeone
+                    - gke
                     type: string
                 required:
                 - providerName
