introduce an empty bringYourOwnCloudSpec struct, to be in-sync with regular clusters and fixing some edge cases

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
@@ -120,6 +120,8 @@ spec:
                     - subscriptionID
                     - tenantID
                     type: object
+                  bringyourown:
+                    type: object
                   eks:
                     properties:
                       accessKeyID:
@@ -435,6 +437,7 @@ spec:
                   the cluster.
                 type: string
             required:
+            - cloudSpec
             - humanReadableName
             - pause
             type: object
