update docs and codegen

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -1173,6 +1173,19 @@ spec:
                             setting the time when a report generation mechanism kicks
                             off. The Interval MUST be set independently.
                           type: string
+                        type:
+                          default:
+                          - cluster
+                          - namespace
+                          description: Types of reports to generate. Available report
+                            types are cluster and namespace. By default, all types
+                            of reports are generated.
+                          enum:
+                          - cluster
+                          - namespace
+                          items:
+                            type: string
+                          type: array
                       type: object
                     default:
                       kubermatic-metering-report-weekly:
