--- a/docs/zz_generated.seed.yaml
+++ b/docs/zz_generated.seed.yaml
@@ -388,6 +388,8 @@ spec:
         # Schedule in Cron format, see https://en.wikipedia.org/wiki/Cron. Please take a note that Schedule is responsible
         # only for setting the time when a report generation mechanism kicks off. The Interval MUST be set independently.
         schedule: 0 1 * * 6
+        # Types of reports to generate. Available report types are cluster and namespace. By default, all types of reports are generated.
+        type: null
     # StorageClassName is the name of the storage class that the metering tool uses to save processed files before
     # exporting it to s3 bucket. Default value is kubermatic-fast.
     storageClassName: kubermatic-fast
