Allow rendering dual-stack IPAddressPool in metallb addon (#10763)
* Allow rendering dual-stack IPAddressPool in metallb addon

Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>

* Simplify templating

Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>

Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>

--- a/addons/metallb/01_address-pools.yaml
+++ b/addons/metallb/01_address-pools.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 {{- if not .Variables.disableAutoIPAMAllocation }}
+
 {{- if .Cluster.Network.IPAMAllocations.metallb }}
 {{- $allocation := .Cluster.Network.IPAMAllocations.metallb }}
 ---
@@ -32,12 +33,36 @@ spec:
     {{- end }}
   {{- end }}
 {{- end }}
+
+{{- if and (index .Cluster.Network.IPAMAllocations "metallb-ipv4") (index .Cluster.Network.IPAMAllocations "metallb-ipv6") }}
+---
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
+  name: kkp-managed-pool-dualstack
+  namespace: metallb-system
+spec:
+  addresses:
+{{- range $allocName := list "metallb-ipv4" "metallb-ipv6" }}
+{{- $allocation := index $.Cluster.Network.IPAMAllocations $allocName }}
+  {{- if eq $allocation.Type "prefix" }}
+    - {{ $allocation.CIDR }}
+  {{- end }}
+  {{- if eq $allocation.Type "range" }}
+    {{- range $allocation.Addresses }}
+    - {{ . }}
+    {{- end }}
+  {{- end }}
+{{- end }}
+{{- end }}
+
 {{- end }}
 
 {{- if .Variables.addressPoolYaml }}
 ---
 {{ .Variables.addressPoolYaml }}
 {{- end }}
+
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
