[release/v2.20] Fix GCE tests (#10764)

--- a/charts/kubermatic-operator/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/charts/kubermatic-operator/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -474,6 +474,8 @@ spec:
                       nodePortsAllowedIPRange:
                         type: string
                       serviceAccount:
+                        description: The Google Service Account (JSON format), encoded
+                          with base64.
                         type: string
                       subnetwork:
                         type: string
@@ -583,6 +585,7 @@ spec:
                       csiKubeconfig:
                         type: string
                       kubeconfig:
+                        description: The cluster's kubeconfig file, encoded with base64.
                         type: string
                     type: object
                   nutanix:
